--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 :root {
     --color-text: #222222;
+    --color-gray: #EEEEEE;
 }
 
 * {
@@ -29,10 +30,10 @@ body {
     font-family: 'Roboto', sans-serif;
     color: var(--color-text);
     padding: 2rem;
+    font-size: 1.6rem;
 }
 
 p {
-    font-size: 1.6rem;
     font-weight: 300;
     line-height: 125%;
     margin-bottom: 0.5rem;
@@ -45,17 +46,33 @@ h1 {
 }
 
 h1 > span {
-    display: inline-block;
+    display: block;
     font-weight: 300;
     font-size: 2rem;
+    margin-top: 0.5rem;
 }
 
 h3 {
     font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    background-color: var(--color-gray);
+    padding: 1rem;
 }
 
 code {
     font-family:'Courier New', Courier, monospace;
+    font-weight: bold;
+}
+
+section {
+    border: 1px solid var(--color-text);
+    border-radius: 0.5rem;
+    padding: 1rem;
+}
+
+details {
+    margin-top: 2rem;
+    overflow: scroll;
+
 }
