--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,15 @@
 
 :root {
     --color-text: #222222;
-    --color-gray: #EEEEEE;
+    --color-light: #EEEEEE;
+    --color-blue: #00AAFF;
+    --color-green: #00FF6C;
+    --gradient-blue-green: linear-gradient(to right, #00AAFF, #00FF6C);
+
+    --animation-keypress: translate(1px, 1px);
+    --color-shadow: rgba(0, 0, 0, .75);
+    --shadow: 0 1px 2px var(--color-shadow);
+
 }
 
 * {
@@ -31,6 +39,11 @@ body {
     color: var(--color-text);
     padding: 2rem;
     font-size: 1.6rem;
+}
+
+.container {
+    max-width: 780px;
+    margin: 0 auto;
 }
 
 p {
@@ -55,8 +68,7 @@ h1 > span {
 h3 {
     font-size: 2rem;
     font-weight: 500;
-    margin-bottom: 2rem;
-    background-color: var(--color-gray);
+    background-color: var(--color-light);
     padding: 1rem;
 }
 
@@ -69,10 +81,29 @@ section {
     border: 1px solid var(--color-text);
     border-radius: 0.5rem;
     padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
 details {
-    margin-top: 2rem;
     overflow: scroll;
 
+}
+
+.button {
+    padding: 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background: var(--color-blue);
+    color: var(--color-light);
+    display: inline-block;
+    font-weight: 500;
+    box-shadow: var(--shadow);
+}
+
+.button:active {
+    transform: var(--animation-keypress);
+    box-shadow: none;
 }
