--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@
     --animation-keypress: translate(1px, 1px);
     --color-shadow: rgba(0, 0, 0, .75);
     --shadow: 0 1px 2px var(--color-shadow);
-
 }
 
 * {
@@ -106,4 +105,8 @@ details {
 .button:active {
     transform: var(--animation-keypress);
     box-shadow: none;
+}
+
+pre {
+    overflow: scroll;
 }
