--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@ body {
 .container {
     max-width: 780px;
     margin: 0 auto;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
 p {
